# WifeyMOOCEditor

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  WifeyMOOCEditor.desktop  WifeyMOOCEditor.pro  basequestioneditor.h  configdialog.cpp  configdialog.h  droptag.cpp  droptag.h  example_questions.json  helpers.h  jsonhandler.cpp  jsonhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediahandler.cpp  mediahandler.h  prompts.json  questioneditor.cpp  questioneditor.h  questionhandlers.cpp  questionhandlers.h  questiontemplate.cpp  questiontemplate.h  questiontypes.h  wifeymooc-editor.desktop  wifeymooc_json_editor-ai.py  wifeymooc_json_editor.py
editors/: basequestioneditor.h  categorizationeditor.cpp  categorizationeditor.h  fillblanksdropdowneditor.cpp  fillblanksdropdowneditor.h  imagetaggingeditor.cpp  imagetaggingeditor.h  listpickeditor.cpp  listpickeditor.h  matchphraseseditor.cpp  matchphraseseditor.h  matchsentenceeditor.cpp  matchsentenceeditor.h  mcqmultipleeditor.cpp  mcqmultipleeditor.h  mcqsingleeditor.cpp  mcqsingleeditor.h  multiquestionseditor.cpp  multiquestionseditor.h  orderphraseeditor.cpp  orderphraseeditor.h  patch.patch  sequenceaudioeditor.cpp  sequenceaudioeditor.h  wordfilleditor.cpp  wordfilleditor.h
editors/orig/: listpickeditor.cpp.orig  matchphraseseditor.cpp.orig  matchsentenceeditor.cpp.orig  mcqmultipleeditor.cpp.orig  mcqsingleeditor.cpp.orig  multiquestionseditor.cpp.orig
